<resources>
    <string name="app_name">EDAS</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_event">Event</string>
    <string name="pick_time">Select time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="not_empty">Should not be empty</string>
    <string name="action_add_event">Add event</string>
    <string name="action_edit_event">Edit</string>
    <string name="past">Past</string>
    <string name="action_load">Load</string>
    <string name="title_activity_login">Login</string>
    <string name="password">Password</string>
    <string name="something_wrong">Something broken</string>
    <string name="wait">Please, wait</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="success">Success</string>
    <string name="try_later">Something went wrong, try again later</string>
    <string name="internal_error">Internal error, try again</string>
    <string name="title_activity_alarm">Set an alarm</string>
    <string name="select_date">Select date</string>
    <string name="alarm_once">Once</string>
    <string name="alarm_repeat">Repeat every</string>
    <string name="alarm_minutes">Minutes</string>
    <string name="alarm_record">Record</string>
    <string name="alarm_play">Play</string>
    <string name="alarm_recording">Recording...</string>
    <string name="alarm_playing">Playing...</string>
    <string name="alarm_create">Create alarm</string>
    <string name="title_activity_alarm_receiver">Alarm</string>
    <string name="alarm_remove">Remove alarm</string>
    <string name="action_off">Turn off</string>
    <string name="action_set_alarm">Set alarm</string>
</resources>
